--- a/README
+++ b/README
@@ -1,19 +1,24 @@
 Text::Format
 
-wrap()      format text into a paragraph.  text is first broken into
-            words and then joined back together to make up the
-            paragraph.
+format()        format text into a paragraph.  text is first broken into
+                words and then joined back together to make up the
+                paragraph.
 
-fill()      treats each element of the array passed in as a separate
-            paragraph and passes them to wrap for formatting.  the list
-            returned will be then formatted into separate paragraphs
+paragraphs()    treats each element of the array passed in as a separate
+                paragraph and passes them to format() for formatting.
+                the list returned will be then formatted into separate
+                paragraphs
 
-center()    centers all the lines that were passed in.
+center()        centers all the lines that were passed in.
 
-expand()    expand tabs into spaces.
+expand()        expand tabs into spaces.
 
-unexpand()  turn spaces into tabs.  first calls expand to expand tabs
-            into spaces.
+unexpand()      turn spaces into tabs.  first calls expand() to expand
+                tabs into spaces and then turns tabstop number of spaces
+                into tabs, you can set tabstop size with tabstop().
+
+There are some incompatible changes compared to version 0.33.  Look at
+the Changes file to see what they are.
 
 To install :
 
