--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Text::Format.
 
+0.41  Mon Feb  2 22:57:33 1998
+    - fixed non-breaking space bug
+    - added some more error checking to new() and config()
+
 0.40  Thu Jan 29 16:47:41 1998
     - added support for non-breaking space
     - made some changes that make the module incompatible with the
