Import of GABOR/Text-Format0.43 from CPAN.
gitpan-cpan-distribution: Text-Format
gitpan-cpan-version:      0.43
gitpan-cpan-path:         GABOR/Text-Format0.43.tar.gz
gitpan-cpan-author:       GABOR
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension Text::Format.
 
+0.43 Sat Feb  7 14:55:39 1998
+    - fixed some warnings that were occurring
+    - NWrap now version 0.11 - silly bug fix, bug crept in at last
+      moment after testing
+
 0.42 Fri Feb  6 18:37:13 1998
     - no real changes as far as the user is concerned
     - changed some internal subroutines from being just a reference to
