Import of GABOR/Text-Format0.44+NWrap0.11 from CPAN.
gitpan-cpan-distribution: Text-Format
gitpan-cpan-version:      0.44+NWrap0.11
gitpan-cpan-path:         GABOR/Text-Format0.44+NWrap0.11.tar.gz
gitpan-cpan-author:       GABOR
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Text::Format.
 
+0.44 Thu Feb 12 16:31:08 1998
+    - added quotes to hash keys as 5.003 didn't like unquoted hash keys
+      starting with an underscore
+
 0.43 Sat Feb  7 14:55:39 1998
     - fixed some warnings that were occurring
 
@@ -61,3 +65,11 @@ Revision history for Perl extension Text::Format.
       basically the same as Text::Wrap at this point just without the
       chance for dying, it's just a basic module - Andreas Koenig
       suggested to make it object oriented
+
+Revision history for Perl extension Text::NWrap.
+
+0.11 Sat Feb  7 14:55:39 1998
+    - silly bug fix, bug crept in at last moment after testing
+
+0.10 Fri Feb  6 18:37:13 1998
+    - added the module Text::NWrap which is meant to replace Text::Wrap.
