--- a/README
+++ b/README
@@ -27,6 +27,7 @@ make
 make test
 make install
 
-Copyright (c) 1998 Gabor Egressy.  All rights reserved.  All wrongs
-reversed.  This program is free software; you can redistribute and/or
-modify it under the same terms as Perl itself.
+Copyright (c) 1998 Gabor Egressy <gabor@vmunix.com>.
+All rights reserved.  All wrongs reversed.  This program is free
+software; you can redistribute and/or modify it under the same terms as
+Perl itself.
