Import of GABOR/Text-Format0.51+NWrap0.11 from CPAN.
gitpan-cpan-distribution: Text-Format
gitpan-cpan-version:      0.51+NWrap0.11
gitpan-cpan-path:         GABOR/Text-Format0.51+NWrap0.11.tar.gz
gitpan-cpan-author:       GABOR
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -18,6 +18,11 @@ unexpand()      Turn spaces into tabs.  First calls expand() to expand
                 tabs into spaces and then turns tabstop number of spaces
                 into tabs, you can set tabstop size with tabstop().
 
+Text::NWrap VERSION 0.11
+
+wrap()          simple interface to Text::Format->format(), acts similar
+                to Text::Wrap::wrap()
+
 There are some incompatible changes compared to version 0.33.  Look at
 the Changes file to see what they are.
 There are also some new features.
