--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension Text::Format.
 
+0.51 Mon Feb 23 12:10:45 EST 1998
+    - no real bug fix, just the MANIFEST was wrong, also I got a test
+      script for testing the justify feature from the guy who originally
+      wrote the code for justify
+
 0.50 Sat Feb 21 10:19:33 1998
     - there were no bugs but I figured that the new feature should
       really have its own release.  I also tried to make the
@@ -87,3 +92,11 @@ Revision history for Perl extension Text::Format.
       basically the same as Text::Wrap at this point just without the
       chance for dying, it's just a basic module - Andreas Koenig
       suggested to make it object oriented
+
+Revision history for Perl extension Text::NWrap.
+
+0.11 Sat Feb  7 14:55:39 1998
+    - silly bug fix, bug crept in at last moment after testing
+
+0.10 Fri Feb  6 18:37:13 1998
+    - added the module Text::NWrap which is meant to replace Text::Wrap.
