--- a/Changes
+++ b/Changes
@@ -1,6 +1,12 @@
 Revision history for Perl extension Text::Format.
 
-0.51 Mon Feb 23 12:10:45 EST 1998
+0.52 Sun Mar 29 11:32:50 1998
+    - fixed some warnings that appeared when using hanging indents
+      (tagged paragraphs).  Also added tha ability to use a list
+      as an argument to new() and config() so you can pass a hash ref or
+      a list as long as the list length is mod 2 == 0
+
+0.51 Tue Feb 24 13:32:42 1998
     - no real bug fix, just the MANIFEST was wrong, also I got a test
       script for testing the justify feature from the guy who originally
       wrote the code for justify
@@ -92,3 +98,11 @@ Revision history for Perl extension Text::Format.
       basically the same as Text::Wrap at this point just without the
       chance for dying, it's just a basic module - Andreas Koenig
       suggested to make it object oriented
+
+Revision history for Perl extension Text::NWrap.
+
+0.11 Sat Feb  7 14:55:39 1998
+    - silly bug fix, bug crept in at last moment after testing
+
+0.10 Fri Feb  6 18:37:13 1998
+    - added the module Text::NWrap which is meant to replace Text::Wrap.
