--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension Text::Format.
 
+0.56 Thu May 31 09:23:26 IDT 2012
+    - Add "use warnings;" to lib/Text/Format.pm .
+    - Add t/pod.t .
+    - Add t/pod-coverage.t .
+
 0.55 Thu May 31 09:17:32 IDT 2012
     - Fix small spelling error in the POD:
         - closing https://rt.cpan.org/Ticket/Display.html?id=77481
